--- a/1-screening.tex
+++ b/1-screening.tex
@@ -275,7 +275,7 @@ The industrial interest for noble gases lies first in the many applications atta
  Molten Salt Reactor\cite{Riley_2019} &  ? \\[0.5mm]
 \hline
 \end{tabular}
-\caption{Nature of the Xe/Kr mixture in different applications.}
+\caption{Composition of the Xe/Kr mixture in different applications.}
 \label{tab:indus_app}
 \end{table}
 
