--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -6,12 +6,34 @@
 \chapter{Xenon and krypton transport properties}
 \vspace*{-1\baselineskip}
 
-\section{Existing methodologies}
+\section{Current state of the art}
 
-Experiment?
-
+Experiment? \todo{reprendre la review daglar}
 
 \subsection{Molecular dynamics}
+
+\begin{figure}[ht]
+    \centering
+        \includegraphics[width=6cm]{figures/5-diffusion/diffusion_prediction.pdf}
+        \caption{}
+        \label{fgr:}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+        \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff.pdf}
+        \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.pdf}
+        \caption{}
+        \label{fgr:}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+        \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_Df-ccdc_barrier.pdf}
+        \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
+        \caption{}
+        \label{fgr:}
+\end{figure}
 
 \subsection{Fast kinetic Monte Carlo}
 tutrast
