--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -5,6 +5,7 @@
 
 \chapter{Thermodynamic Exploration of Xenon/Krypton Separation}
 \vspace*{-1\baselineskip}
+\todo{Partie sur la détermination des descripteurs géométriques améliorable}
 
 \section{Simulation of Adsorption Equilibrium Properties}
 
