--- a/main.tex
+++ b/main.tex
@@ -278,7 +278,7 @@
 %% Math stuff
 %\let\phi\varphi
 %\let\epsilon\varepsilon
-%\let\vec\mathnormalbold
+\let\vect\mathnormalbold
 %\def\d{\text{d}}
 %\let\oldring\r
 %\def\r{\vec{r}}
