--- a/cover.tex
+++ b/cover.tex
@@ -8,10 +8,10 @@
 \specialty{Chimie Physique}
 \date{XX Septembre 2023}
 
-\jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
-\jurymember{2}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
-\jurymember{3}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
-\jurymember{4}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
+\jurymember{1}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
+\jurymember{2}{Rochus \textsc{Schmid}}{Professeur, Ruhr-University Bochum}{Rapporteur}
+\jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
+\jurymember{4}{Michael \textsc{Badawi}}{Maître de Conférences, Université de Lorraine}{Rapporteur}
 \jurymember{5}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
 \jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
